# poec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.toml
data/: transforms_t1.yaml
data/metadata/: divination_cards.yaml  vendor_recipes.yaml
data/odds_t2/: tainted_currency.yaml  temple_double_corrupt.yaml  vaal_amulet.yaml
docs/: grounded-transforms-followups.md  phase0-dod.md  phase0-followups.md  phase1-dod.md  phase2-dod.md  phase2-followups.md  prd.md  repoe-snapshot.md  trade-deeplinks.md
docs/adr/: 0001-poedb-canonical-metadata-source.md  0002-separate-price-and-metadata-concerns.md  0003-transforms-must-be-grounded.md  README.md  (+6 more)
oracle/: app.py  cli.py  config.py  models.py
tests/: test_aggregate.py  test_bankroll.py  test_cli_commands.py  test_cli_smoke.py  test_compliance.py  test_config.py  test_demand.py  test_divination_cards.py  test_engine.py  test_ev.py  test_factory.py  test_factory_cli.py  test_gamedata.py  test_golden_ev.py  test_http_client.py  test_league_service.py  test_listings.py  test_live_smoke.py  test_maturity.py  test_ninja_client.py  test_observations.py  test_price_service.py  test_registry.py  test_report.py  test_resolve.py  test_scan_cli.py  test_scan_live_smoke.py  test_scan_service.py  test_scanner_models.py  test_store_db.py  test_store_ev.py  test_store_scans.py  test_t2_live_smoke.py  test_t2_models.py  test_t2_registry.py  test_t2_report.py  test_t2_service.py  test_vendor_recipes.py
tools/: harvest_divination_cards.py  harvest_vendor_recipes.py
(+46 files in other folders)
